--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div  class="contenedor">
 
-        <div  class="encabezado"></div>
+        <div  class="encabezado">TECNOLOGIA E INFORMATICA</div>
         <div  class="menu"></div>
         <div  class="contenedor2">
-            <div  class="izquierdo"></div>
+            <div  class="izquierdo">VALENTINA HURTADO CANO</div>
             <div  class="centro"></div>
             <div  class="derecho"></div>
         </div>
